@@ -11,11 +11,11 @@
         <div id='panel'>
             <fieldset>
                 <legend>網路電台</legend>
-                <input id='control' type='button' value='撥放'/>
+                <input id='control' type='button' value='播放'/>
                 <select id="category"></select>
                 <select id="channel"></select>
             </fieldset>
-            <div id='player'></div>
         </div>
+        <div id='player'></div>
     </body>
 </html>
